[package]
name = "highlighting"
version = "0.1.1"
edition = "2021"
readme = "README.md"
license = "MIT"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
homepage = "https://github.com/viz-rs/highlighting"
documentation = "https://docs.rs/highlighting"
description = "tree-sitter syntax highlighting"
keywords = ["syntax", "highlighting", "highlighter", "colouring", "parsing"]
categories = ["parser-implementations", "parsing", "text-processing"]

exclude = ["/queries", "themes/", ".*"]

[dependencies]
tree-sitter-highlight = "0.20.1"

[dev-dependencies]
tree-sitter-rust = { git = "https://github.com/tree-sitter/tree-sitter-rust.git", branch = "master" }
